@@ -1,13 +1,15 @@
 package org.embeddedt.embeddium.impl.render.chunk.shader;
 
-import com.google.common.collect.ImmutableList;
+import org.embeddedt.embeddium.impl.gl.shader.ShaderBindingContext;
+import org.lwjgl.opengl.GL20;
 
 import java.util.List;
 import java.util.function.Function;
 
-public enum ChunkFogMode {
-    NONE(ChunkShaderFogComponent.None::new, ImmutableList.of()),
-    SMOOTH(ChunkShaderFogComponent.Smooth::new, ImmutableList.of("USE_FOG", "USE_FOG_SMOOTH"));
+public enum ChunkFogMode implements ChunkShaderComponent.Factory<ChunkShaderFogComponent> {
+    NONE(ChunkShaderFogComponent.None::new, List.of()),
+    EXP2(ChunkShaderFogComponent.Exp2::new, List.of("USE_FOG", "USE_FOG_EXP2")),
+    SMOOTH(ChunkShaderFogComponent.Smooth::new, List.of("USE_FOG", "USE_FOG_SMOOTH"));
 
     private final Function<ShaderBindingContext, ChunkShaderFogComponent> factory;
     private final List<String> defines;
@@ -17,11 +19,26 @@ public enum ChunkFogMode {
         this.defines = defines;
     }
 
-    public Function<ShaderBindingContext, ChunkShaderFogComponent> getFactory() {
-        return this.factory;
+    @Override
+    public ChunkShaderFogComponent create(ShaderBindingContext context) {
+        return factory.apply(context);
     }
 
     public List<String> getDefines() {
         return this.defines;
+    }
+
+    public static ChunkFogMode fromGLMode(int mode) {
+        switch (mode) {
+            case 0:
+                return ChunkFogMode.NONE;
+            case GL20.GL_EXP2:
+            case GL20.GL_EXP:
+                return ChunkFogMode.EXP2;
+            case GL20.GL_LINEAR:
+                return ChunkFogMode.SMOOTH;
+            default:
+                throw new UnsupportedOperationException("Unknown fog mode: " + mode);
+        }
     }
 }
